Pushing changes made on login page

--- a/frontend_/src/styles/Navbar.css
+++ b/frontend_/src/styles/Navbar.css
@@ -24,7 +24,7 @@
   margin-right: 10px;
 }
 .navbar__title {
-  font-family: "Just Me Again Down Here", cursive;
+  font-family:"Parkinsans";
   font-size: 30px;
   color: #fff;
 }
