--- a/frontend_/src/styles/HomePage.css
+++ b/frontend_/src/styles/HomePage.css
@@ -1,10 +1,9 @@
 .Homepagebody{
-    margin: 0;
-    padding: 0;
+    
     background-image: url('https://res.cloudinary.com/dctdi6x4e/image/upload/v1745596935/hnhoquihojwsqx78ihfg.jpg');
     background-size: cover;        /* Makes the image cover the whole page */
     background-repeat: no-repeat;  /* Prevents repeating */
     background-position: center;   /* Centers the image */
-    height: 60vh;  
-    
+    height: 105vh;  
+    margin: -10px;
   }
